--- a/src/shared/nav-panel/ui/nav-panel.css
+++ b/src/shared/nav-panel/ui/nav-panel.css
@@ -1,6 +1,7 @@
 .NavPanel {
   --defaultWidth: 333;
-  position: relative;
+  z-index: 1;
+  position: fixed;
   width: calc(var(--navPanel_size, --defaultWidth) * 1px);
   min-width: calc(var(--navPanel_automove, var(--navPanel_collapsed, 177px)));
   max-width: 777px;
@@ -11,6 +12,8 @@
   grid-template-columns: 1fr;
   user-select: none;
   transition: width var(--navPanel_idle, 0.3s);
+  top: calc(var(--headerHeight) * 1px);
+  background-color: var(--white);
 }
 .Nav {
   transition: width var(--navPanel_idle, 0.3s);
@@ -32,7 +35,6 @@
 }
 
 .NavPanel .ResizeTarget {
-  /* position: absolute; */
   top: 50%;
   transform: translateY(-50%);
   height: 100%;
