--- a/src/app/index.css
+++ b/src/app/index.css
@@ -62,7 +62,7 @@ headerNavMainLayout
 .mainLayout .NavPanel {
   display: none;
 }
-.mainLayout header {
+.mainLayout .Header {
   display: none;
 }
 
